Added DTO to project